<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_back_black"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/tvForogtPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pass"
                android:layout_gravity="end"
                android:layout_centerInParent="true"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginRight="@dimen/_20sdp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/_12sdp"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_text_forgot"
            android:layout_gravity="end"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_12sdp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:contentPadding="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp">

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:textSize="@dimen/_12sdp"
                android:inputType="textVisiblePassword"
                android:fontFamily="@font/poppins_regular"
                android:singleLine="true"
                android:drawablePadding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:padding="@dimen/_10sdp"
                android:background="@null"/>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/orange_back_10"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:text="@string/submit" />

    </LinearLayout>

</layout>