<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:paddingBottom="@dimen/_20sdp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_100sdp"
                    android:src="@drawable/app_icon"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_100sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loging"
                    android:layout_gravity="start"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:textSize="@dimen/_20sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_your_email_and_password"
                    android:layout_gravity="start"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:textColor="@color/gray"
                    android:layout_centerHorizontal="true"
                    android:textSize="@dimen/_10sdp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="start"
                    android:text="@string/email"
                    android:textAllCaps="false"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp">

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:textSize="@dimen/_10sdp"
                        android:inputType="textVisiblePassword"
                        android:fontFamily="@font/poppins_regular"
                        android:singleLine="true"
                        android:drawablePadding="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:padding="@dimen/_10sdp"
                        android:background="@null"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="start"
                    android:text="@string/password"
                    android:textAllCaps="false"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp">

                    <EditText
                        android:id="@+id/etPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:textSize="@dimen/_10sdp"
                        android:inputType="textPassword"
                        android:fontFamily="@font/poppins_regular"
                        android:singleLine="true"
                        android:drawablePadding="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:padding="@dimen/_10sdp"
                        android:background="@null"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvForogtPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fogrot_password"
                    android:layout_gravity="end"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_centerHorizontal="true"
                    android:textSize="@dimen/_12sdp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/orange_back_10"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginLeft="@dimen/_40sdp"
                    android:layout_marginRight="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:text="@string/log_in" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_an_account"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tvSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="@dimen/_12sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:textStyle="bold"
                        android:textColor="@color/green" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>

</layout>