<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:src="@drawable/ic_back_black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="start"
            android:text="@string/enter_your_6_digit_code"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvVerifyText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:padding="3dp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="start"
            android:text="@string/code"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:contentPadding="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp">

            <EditText
                android:id="@+id/etOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_otp"
                android:textSize="@dimen/_12sdp"
                android:inputType="number"
                android:fontFamily="@font/poppins_regular"
                android:singleLine="true"
                android:drawablePadding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:padding="@dimen/_10sdp"
                android:background="@null"/>

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_40sdp">

            <TextView
                android:id="@+id/tvResend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:layout_centerVertical="true"
                android:padding="@dimen/_10sdp"
                android:text="@string/resend"
                android:textAllCaps="false"
                android:textColor="@color/green"
                android:textSize="@dimen/_12sdp" />

            <ImageView
                android:id="@+id/next"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                android:layout_alignParentRight="true"
                android:src="@drawable/right_arrow_orange_back"/>

        </RelativeLayout>

    </LinearLayout>

</layout>